name:                adventofcode
version:             0.1.0.0
synopsis:            Advent of Code 2017 Haskell Solutions
license:             MIT
author:              Shantanu Joshi <weeemadarthur@yggdrasil.in>
copyright:           Copyright: (c) 2017 Shantanu Joshi

build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AdventOfCode,
                       Day01, Day02, Day03, Day04, Day05
                     , Day06, Day07, Day08, Day09, Day10
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , time >= 1.6.0.1
                     , split >= 0.2.3.3
                     , vector >= 0.12.0.1
                     , directory >= 1.3.0.0
                     , text >= 1.2.3.1
  default-language:    Haskell2010

executable aoc2017
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       adventofcode
                     , base
  default-language:    Haskell2010

test-suite day01
  hs-source-dirs:      test
  main-is:             Day01Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day02
  hs-source-dirs:      test
  main-is:             Day02Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day03
  hs-source-dirs:      test
  main-is:             Day03Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day04
  hs-source-dirs:      test
  main-is:             Day04Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day05
  hs-source-dirs:      test
  main-is:             Day05Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day06
  hs-source-dirs:      test
  main-is:             Day06Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day07
  hs-source-dirs:      test
  main-is:             Day07Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day08
  hs-source-dirs:      test
  main-is:             Day08Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day09
  hs-source-dirs:      test
  main-is:             Day09Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite day10
  hs-source-dirs:      test
  main-is:             Day10Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , adventofcode
                     , hspec >= 2.4.4
  ghc-options:         -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wmdrthr/advent-of-code
  subdir:   2017/haskell
